--- a/HomeService/app/build.gradle
+++ b/HomeService/app/build.gradle
@@ -27,6 +27,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            res.srcDirs = [
+                    "src/main/res/common",
+                    "src/main/res/control"
+            ]
+        }
+    }
+
+    applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            def file = output.outputFile
+            output.outputFile = new File(file.parent, file.name.replace(".apk", "-" + defaultConfig.versionName + "." + defaultConfig.versionCode + ".apk"))
+        }
+        variant.assemble.doLast {
+            variant.outputs.each { output ->
+                File unaligned = output.packageApplication.outputFile;
+                File aligned = output.outputFile
+                if (!unaligned.getName().equalsIgnoreCase(aligned.getName())) {
+                    unaligned.delete()
+                }
+            }
+        }
+    }
 }
 
 dependencies {
