--- a/HomeService/app/build.gradle
+++ b/HomeService/app/build.gradle
@@ -77,11 +77,10 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     // Rx
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.5'
-    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
-    provided 'com.android.databinding:compiler:2.2.1'
-    apt 'com.android.databinding:compiler:2.2.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    provided 'com.android.databinding:compiler:2.2.3'
+    apt 'com.android.databinding:compiler:2.2.3'
 
 
     // Test section
